[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "isocodes"
version = "2024.11.20"
description = "This project provides lists of various ISO standards (e.g. country, language, language scripts, and currency names) in one place"
authors = [{ name = "Atem18", email = "contact@atemlire.com" }]
license = { file = "LICENSE" }
readme = "README.md"
homepage = "https://github.com/Atem18/isocodes"
repository = "https://github.com/Atem18/isocodes"
keywords = ["iso"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.optional-dependencies]

dev = ["pre-commit == 3.7.1", "ruff == 0.6.3", "mypy == 1.10.1"]

doc = ["mkdocs == 1.6.0", "mkdocs-material == 9.6.1", "mkdocstrings == 0.25.2"]

test = [
    "pytest == 8.2.2",
    "tox == 4.18.0",
    "pyinstaller[hook_testing] == 6.10.0",
    "psutil == 6.0.0",
]

build = ["hatch == 1.12.0"]

[project.entry-points.pyinstaller40]
hook-dirs = "isocodes.__pyinstaller:get_hook_dirs"
tests = "isocodes.__pyinstaller:get_hook_dirs"
