[project]
name = "isocodes"
version = "2025.07.05"
description = "This project provides lists of various ISO standards (e.g. country, language, language scripts, and currency names) in one place"
authors = [{ name = "Atem18", email = "contact@atemlire.com" }]
license = { file = "LICENSE" }
readme = "README.md"
homepage = "https://github.com/Atem18/isocodes"
repository = "https://github.com/Atem18/isocodes"
keywords = ["iso"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.9"
dependencies = []

[project.entry-points.pyinstaller40]
hook-dirs = "isocodes.__pyinstaller:get_hook_dirs"
tests = "isocodes.__pyinstaller:get_hook_dirs"

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true